--- a/style.css
+++ b/style.css
@@ -1,15 +1,23 @@
 *{
     font-family: 'Inter', sans-serif;
-    font-size: 32px; 
+    font-size: 32px;
 }
 
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
-    background: #f3f5fc;   
+    display: flex;
+    flex-direction: column;
+    background: #f3f5fc;
+    padding: 0;
+    margin: 0;
 }
 
 header{
-   
     background: #0a3975;
     display:flex;
     justify-content: space-between;
@@ -39,8 +47,11 @@ main {
     display:flex;
     justify-content: space-between;
     gap: 40px;
-    margin: 0 auto;
-    padding: 40px 20px 40px 20px;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: middle;
 }
 
 .texto-entrada {
@@ -108,17 +119,12 @@ main {
 
 .texto-resultado{
     display: none;
-    overflow: hidden;
-    resize: none;
-   
 }
 
 #resultado-texto{
-    resize: auto;
-    overflow: auto;
-    height: 600px;
-    
+    min-height: 500px;
 }
+
 .mensagem::placeholder{
     color: #0A3871;
 }
@@ -186,17 +192,22 @@ section p {
 }
 
 footer{
+    flex-shrink: 0;
+    height: 10%;
     width: 100%;
-    margin: 0 auto;
+    position: static;
+    bottom: 0;
+    margin: auto auto;
     background: #031326;
     padding-top: 40px;
     padding-bottom: 40px;
-    color: white;
+    color: white;  
 }
 
 footer h6 {
-    font-size: 14px;
+    
+    font-size: 12px;
     text-align: center;
     font-family: 'Inter', sans-serif;
+    line-height: 20px; 
 }
-
